# gnuweb

./: .gitignore  COPYING  ChangeLog  INSTALL  Makefile.am  README  configure.ac
doc/: general-idea.tex  gnuweb-erlang.tex  gnuweb-manual.tex  gnuweb-php.tex  introduction.tex
example/erlang/: Makefile.am  README  configure.ac
example/erlang/app/: Makefile.am  erl_crash.dump
example/erlang/app/ebin/: he.beam  hello.app  hello.boot  hello.rel  hello.script  hello_app.beam  lo.beam
example/erlang/app/src/: he.erl  hello_app.erl  lo.erl
example/php/: README  configure.ac
example/php/src/: Makefile.am  libhello.php
example/php/src/hello/: he.php  lo.php
example/sql/: Makefile.am  README  configure.ac  example.sql.in
example/webapp/: AUTHORS  README  configure.ac
example/webapp/src/: Makefile.am  index.html
example/webapp/src/css/: Makefile.am  libhello.css
example/webapp/src/css/hello/: he.css  lo.css
example/webapp/src/js/: Makefile.am  libhello.js
example/webapp/src/js/hello/: he.js  lo.js
m4/: Makefile.am
m4/common/: acx_check_prog.m4  acx_define_dir.m4  acx_done.m4  acx_feature.m4  acx_init_gnuweb.m4  acx_package.m4  acx_prefix.m4  acx_section.m4  acx_silent_v.m4  amx_common.m4
m4/erlang/: acx_check_erlang_lib.m4  acx_erlang.m4  acx_eunit.m4  acx_init_script.m4  amx_erlang.m4
m4/php/: acx_check_php_lib.m4  acx_htaccess.m4  acx_php.m4  amx_php.m4
m4/sql/: acx_sql.m4  amx_sql.m4
m4/webapp/: acx_check_webapp_lib.m4  acx_webapp.m4  amx_webapp.m4
src/: Makefile.am  conf2lib.pl
src/runtime/: SClass.pm  SModule.pm
src/runtime/eapp/: Class.pm  Module.pm
src/runtime/erel/: Class.pm  Module.pm
src/runtime/js/: Class.pm  Module.pm
src/runtime/perl/: Class.pm  Module.pm
src/runtime/php/: Class.pm  Module.pm
