#
# GNU Web M4 Scripts
#

M4  = common/acx_init_gnuweb.m4
M4 += common/acx_prefix.m4
M4 += common/acx_check_prog.m4
M4 += common/acx_define_dir.m4
M4 += common/acx_silent_v.m4
M4 += common/acx_feature.m4
M4 += common/amx_common.m4
M4 += common/acx_package.m4

M4 += common/acx_section.m4
M4 += common/acx_done.m4


M4 += php/acx_php.m4
M4 += php/amx_php.m4
M4 += php/acx_check_php_lib.m4
M4 += php/acx_htaccess.m4

M4 += webapp/acx_webapp.m4
M4 += webapp/amx_webapp.m4
M4 += webapp/acx_check_webapp_lib.m4

M4 += sql/acx_sql.m4
M4 += sql/amx_sql.m4

M4 += erlang/acx_erlang.m4
M4 += erlang/amx_erlang.m4
M4 += erlang/acx_check_erlang_lib.m4

ac_DATA = $(M4)
